# cart-payment

./: .gitignore  README.md  docker-compose.yml  env_example  pyproject.toml  tox.ini
app/: config.py  const.py  database.py  functions.py  main.py  schemas.py
app/routers/: bankslip.py  callback.py  creditcard.py  debitcard.py
tests/: test_bankslip.py  test_creditcard.py  test_debitcard.py  test_functions.py  test_main.py
